[project]
name = "fast-collections"
version = "0.0.1"
description = "Blazing-fast collections you've been missing"
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "khabib73", email = "kh73bb@yahoo.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]
[dependency-groups]
dev = [
    "maturin>=1.14.1",
    "pytest>=8.3.5",
    "ruff>=0.15.22",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.7",
    "pymdown-extensions>=10.15",
]


[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3"]
module-name = "fast_collections"
include = ["fast_collections/"] 
